--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                         </li>
                     </ul>
-                    <a id="redirecionamento" href="https://rastreamento-correio.netlify.app/
+                    <a id="redirecionamento" href="https://correios-rastreio.netlify.app/
 " class="uppercase pulse-button inline-flex h-12 items-center justify-center rounded-md bg-[#00ff11] px-8 text-sm font-medium text-[#1F2937] shadow-md transition-colors hover:bg-[#7bff00] focus:outline-none focus:ring-2 focus:ring-[#7bff00] focus:ring-offset-2">VERIFICAR STATUS DO PEDIDO</a>
                 </div>
             </div>
